build_output.txt
[  0%] Built target cpp_broadcast_bsefo_autogen_timestamp_deps
[  0%] Built target cpp_broadcast_bsefo_autogen
[  2%] Built target cpp_broadcast_bsefo
[  2%] Built target lzo_static_lib_autogen_timestamp_deps
[  2%] Built target lzo_static_lib_autogen
[ 24%] Built target lzo_static_lib
[ 24%] Built target TradingTerminal_autogen_timestamp_deps
[ 24%] Built target TradingTerminal_autogen
[ 24%] Building CXX object CMakeFiles/TradingTerminal.dir/TradingTerminal_autogen/mocs_compilation.cpp.obj
In file included from C:\Users\admin\Desktop\trading_terminal_cpp\build\TradingTerminal_autogen\CY5N3QYTG5/moc_MarketMovementWindow.cpp:10,
                 from C:\Users\admin\Desktop\trading_terminal_cpp\build\TradingTerminal_autogen\mocs_compilation.cpp:78:
C:/Users/admin/Desktop/trading_terminal_cpp/include/views/MarketMovementWindow.h:94:47: error: 'Candle' does not name a type
   94 |   void onCandleCompleted(quint32 token, const Candle &candle);
      |                                               ^~~~~~
C:/Users/admin/Desktop/trading_terminal_cpp/include/views/MarketMovementWindow.h:95:45: error: 'Candle' does not name a type
   95 |   void onCandleUpdated(quint32 token, const Candle &candle);
      |                                             ^~~~~~
C:/Users/admin/Desktop/trading_terminal_cpp/include/views/MarketMovementWindow.h:103:31: error: 'Candle' does not name a type
  103 |   void addCandleToTable(const Candle &candle);
      |                               ^~~~~~
C:\Users\admin\Desktop\trading_terminal_cpp\build\TradingTerminal_autogen\CY5N3QYTG5/moc_MarketMovementWindow.cpp: In static member function 'static void MarketMovementWindow::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)':
C:\Users\admin\Desktop\trading_terminal_cpp\build\TradingTerminal_autogen\CY5N3QYTG5/moc_MarketMovementWindow.cpp:91:105: error: expected '>' before 'Candle'
   91 |         case 2: _t->onCandleCompleted((*reinterpret_cast< quint32(*)>(_a[1])),(*reinterpret_cast< const Candle(*)>(_a[2]))); break;
      |                                                                                                         ^~~~~~
C:\Users\admin\Desktop\trading_terminal_cpp\build\TradingTerminal_autogen\CY5N3QYTG5/moc_MarketMovementWindow.cpp:91:81: error: cast from 'void*' to 'int' loses precision [-fpermissive]
   91 |         case 2: _t->onCandleCompleted((*reinterpret_cast< quint32(*)>(_a[1])),(*reinterpret_cast< const Candle(*)>(_a[2]))); break;
      |                                                                                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\admin\Desktop\trading_terminal_cpp\build\TradingTerminal_autogen\CY5N3QYTG5/moc_MarketMovementWindow.cpp:91:80: error: invalid type argument of unary '*' (have 'int')
   91 |         case 2: _t->onCandleCompleted((*reinterpret_cast< quint32(*)>(_a[1])),(*reinterpret_cast< const Candle(*)>(_a[2]))); break;
      |                                                                                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\admin\Desktop\trading_terminal_cpp\build\TradingTerminal_autogen\CY5N3QYTG5/moc_MarketMovementWindow.cpp:92:103: error: expected '>' before 'Candle'
   92 |         case 3: _t->onCandleUpdated((*reinterpret_cast< quint32(*)>(_a[1])),(*reinterpret_cast< const Candle(*)>(_a[2]))); break;
      |                                                                                                       ^~~~~~
C:\Users\admin\Desktop\trading_terminal_cpp\build\TradingTerminal_autogen\CY5N3QYTG5/moc_MarketMovementWindow.cpp:92:79: error: cast from 'void*' to 'int' loses precision [-fpermissive]
   92 |         case 3: _t->onCandleUpdated((*reinterpret_cast< quint32(*)>(_a[1])),(*reinterpret_cast< const Candle(*)>(_a[2]))); break;
      |                                                                               ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\admin\Desktop\trading_terminal_cpp\build\TradingTerminal_autogen\CY5N3QYTG5/moc_MarketMovementWindow.cpp:92:78: error: invalid type argument of unary '*' (have 'int')
   92 |         case 3: _t->onCandleUpdated((*reinterpret_cast< quint32(*)>(_a[1])),(*reinterpret_cast< const Candle(*)>(_a[2]))); break;
      |                                                                              ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
mingw32-make[2]: *** [CMakeFiles\TradingTerminal.dir\build.make:107: CMakeFiles/TradingTerminal.dir/TradingTerminal_autogen/mocs_compilation.cpp.obj] Error 1
mingw32-make[1]: *** [CMakeFiles\Makefile2:218: CMakeFiles/TradingTerminal.dir/all] Error 2
mingw32-make: *** [Makefile:145: all] Error 2
